force-app/main/default/objects/Form_Section__c/fields/Form_Template__c.field-meta.xml
<CustomField>
    <fullName>Form_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Template</label>
    <referenceTo>Form_Template__c</referenceTo>
    <relationshipLabel>Form Sections</relationshipLabel>
    <relationshipName>Form_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>