force-app/main/default/objects/Form_Section__c/fields/Parent_Form_Section__c.field-meta.xml
<CustomField>
    <fullName>Parent_Form_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Form Section</label>
    <referenceTo>Form_Section__c</referenceTo>
    <relationshipLabel>Child Form Sections</relationshipLabel>
    <relationshipName>Child_Form_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>