force-app/main/default/objects/Form_Section__c/fields/Section_Grid__c.field-meta.xml
<CustomField>
    <fullName>Section_Grid__c</fullName>
    <label>Section Grid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 column</fullName>
            </value>
            <value>
                <fullName>2 column</fullName>
            </value>
            <value>
                <fullName>3 column</fullName>
            </value>
            <value>
                <fullName>4 column</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>