force-app/main/default/objects/Form_Section__c/fields/Section_Number__c.field-meta.xml
<CustomField>
    <fullName>Section_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Section Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>